--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -4,9 +4,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Message Board</title>
 </head>
 <body>
-    
+    <h1>Dojo Secrets</h1>
+    <div class="header">
+        <h1>Dojo Screts</h1>
+        <a href="/logout">Log out</a>
+    </div>
+
+    <div class="main-content">
+        <% if(messages.secrets) {%>
+            <% for(var i of messages.secrets){ %>
+                <p><%= i %></p>
+            <% } %>
+        <% } %>
+
+        <form action="/newSecret" method="post">
+            Name:<input type="text" name="name">
+            Message: <input type="text" name="secret">
+            <input type="submit" value="Post Secret">
+        </form>
+        <% for(var i in messages){ %>
+            <div class="message">
+                <h4>Name: <%=secrets[i].name%></h4>
+                <h4>Message: <%=secrets[i].message%></h4>
+            </div>
+            <% if(messages.comment) {%>
+                <% for(var i of messages.comments){ %>
+                    <p><%= i %></p>
+                <% } %>
+            
+            <%for(var j in comments){%>
+                <div class="comment">
+                    <p>Name: <%=comments[j].name%></p>
+                    <p>Comment: <%=comments[j].comment%></p>
+                </div>
+            <% } %>
+            <% } %>
+            <form action="/newComment/<%=secrets[i].id%>" method="post">
+                Name:<input type="text" name="name">
+                Comment:<input type="text" name="comment">
+                <input type="submit" value="Post Comment">
+            </form>
+        <% } %>
+        
+    </div>
 </body>
 </html>
