--- a/views/show.ejs
+++ b/views/show.ejs
@@ -1,12 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Message Board</title>
 </head>
+
 <body>
-    
+    <h1>Dojo Secrets</h1>
+    <div class="header">
+        <h1>Dojo Screts</h1>
+        <a href="/">Dashboard</a>
+        <a href="/logout">Log out</a>
+    </div>
+
+    <div class="main-content">
+
+        <div class="message">
+            <h4>Name:
+                <%=secrets.name%>
+            </h4>
+            <h4>Message:
+                <%=secretssecret%>
+            </h4>
+        </div>
+
+    <%for(var j in comments){%>
+        <div class="comment">
+            <p>Name:<%=comments[j].name%></p>
+            <p>Comment:<%=comments[j].comment%></p>
+        </div>
+    <% } %>
+
+    </div>
 </body>
+
 </html>
