--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -21,14 +21,12 @@
         <% } %>
 
         <form action="/newSecret" method="post">
-            Name:<input type="text" name="name">
-            Message: <input type="text" name="secret">
+            Secret: <input type="text" name="secret">
             <input type="submit" value="Post Secret">
         </form>
-        <% for(var i in messages){ %>
+        <% for(var i in secrets){ %>
             <div class="message">
-                <h4>Name: <%=secrets[i].name%></h4>
-                <h4>Message: <%=secrets[i].message%></h4>
+                <h4>Secret: <%=secrets[i].secret%></h4>
             </div>
             <% if(messages.comment) {%>
                 <% for(var i of messages.comments){ %>
@@ -43,7 +41,6 @@
             <% } %>
             <% } %>
             <form action="/newComment/<%=secrets[i].id%>" method="post">
-                Name:<input type="text" name="name">
                 Comment:<input type="text" name="comment">
                 <input type="submit" value="Post Comment">
             </form>
