--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -16,7 +16,7 @@
     <div class="main-content">
         <% if(messages.secrets) {%>
             <% for(var i of messages.secrets){ %>
-                <p><%= i %></p>
+                <a href="/secret/<%=i.id%>"><%= i %></a>
             <% } %>
         <% } %>
 
@@ -35,7 +35,6 @@
             
             <%for(var j in comments){%>
                 <div class="comment">
-                    <p>Name: <%=comments[j].name%></p>
                     <p>Comment: <%=comments[j].comment%></p>
                 </div>
             <% } %>
