--- a/views/show.ejs
+++ b/views/show.ejs
@@ -34,6 +34,11 @@
             <p>Comment:<%=comments[j].comment%></p>
         </div>
     <% } %>
+    <form action="/newComment/<%=secrets[i].id%>" method="post">
+        Comment:
+        <input type="text" name="comment">
+        <input type="submit" value="Post Comment">
+    </form>
 
     </div>
 </body>
