--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -14,32 +14,39 @@
     </div>
 
     <div class="main-content">
+
+        <!-- for errors -->
         <% if(messages.secrets) {%>
             <% for(var i of messages.secrets){ %>
-                <a href="/secret/<%=i.id%>"><%= i %></a>
+                <p><%= i %></p>
             <% } %>
         <% } %>
+        <!-- // -->
 
         <form action="/newSecret" method="post">
             Secret: <input type="text" name="secret">
             <input type="submit" value="Post Secret">
         </form>
-        <% for(var i in secrets){ %>
+        <% for(var secret of secrets){ %>
             <div class="message">
-                <h4>Secret: <%=secrets[i].secret%></h4>
+                <h4>Secret: <%=secret.secret%></h4>
             </div>
+
+            <!-- for errors -->
             <% if(messages.comment) {%>
                 <% for(var i of messages.comments){ %>
                     <p><%= i %></p>
                 <% } %>
-            
-            <%for(var j in comments){%>
+            <% } %>
+            <!-- // -->
+
+            <%for(var j of secret.comment){%>
                 <div class="comment">
-                    <p>Comment: <%=comments[j].comment%></p>
+                    <p>Comment: <%=j.comment%></p>
                 </div>
             <% } %>
-            <% } %>
-            <form action="/newComment/<%=secrets[i].id%>" method="post">
+            
+            <form action="/newComment/<%=secret.id%>" method="post">
                 Comment:<input type="text" name="comment">
                 <input type="submit" value="Post Comment">
             </form>
