--- a/views/secrets.ejs
+++ b/views/secrets.ejs
@@ -28,8 +28,8 @@
             <input type="submit" value="Post Secret">
         </form>
         <% for(var secret of secrets){ %>
-            <div class="message">
-                <h4>Secret: <%=secret.secret%></h4>
+            <div class="secret">
+                <h4>Secret: <a href="/secret/<%=secret.id%>"><%=secret.secret%></a></h4>
             </div>
 
             <!-- for errors -->
