--- a/views/show.ejs
+++ b/views/show.ejs
@@ -12,7 +12,7 @@
 <body>
     <div class="header">
         <h1>Dojo Screts</h1>
-        <a href="/">Dashboard</a>
+        <a href="/secrets">Dashboard</a>
         <a href="/logout">Log out</a>
     </div>
 
